# spp

./: .gitignore  README.md  keys.py  main.py  move.py  package-lock.json  pyproject.toml  spp.db  test.json
.devcontainer/: devcontainer.json
.trunk/: trunk.yaml
biblioterra_scraper/config/: __init__.py  driver_config.py  uploader_config.py
biblioterra_scraper/download/: __init__.py  base.py  elivros_scraper.py  helpers.py
biblioterra_scraper/exceptions/: __init__.py  exceptions.py
biblioterra_scraper/helpers/: __init__.py  (+1 more)
config/: __init__.py  data_config.py  driver_config.py  logging_config.py
data/: history.db-journal
exceptions/: __init__.py  exceptions.py
history/: __init__.py  history.py
menu/: __init__.py  spp_menu.py  spp_submenus.py
models/: history_models.py  settings_models.py  uploader_models.py
routines/: __init__.py  scraper_routines.py  upload_routines.py  uploader_routines.py
scrapers/: elivros_scraper.py  helpers.py
temp/: A Dieta dos 17 Dias - Dr. Mike Moreno.epub  Aquela Força Medonha - C. S. Lewis.epub  Caos Planejado_ Intervencionismo, Socialismo, Fascismo, Nazismo - Ludwig Von Mises.epub  Confesse - Colleen Hoover.epub  Eleanor & Park - Rainbow Rowell.pdf.crdownload  Guia Politicamente Incorreto da Historia do Brasil - Leando Narloch.epub  Iniciação à História da Filosofia - Danilo Marcondes.epub  Lords of Deliverance - Larissa Ione.epub  Não Me Arrependo - Memórias do Rock N Roll - Ace Frehley.epub
tests/: tests_elivros_downloader.py
upload/: __init__.py  helpers.py  history_handler.py  libgen_uploader.py
(+28 files in other folders)
